# mutter

./: .gitignore  Makefile.am  configure.ac  configure.in
clutter/: .gitignore  Makefile.am  clutter-config.h  clutter-marshal.c  clutter-marshal.h  configure.ac
clutter/clutter/: ClutterXkbCommon.gir.in  Makefile.am  clutter-actor-private.h  clutter-actor.c  clutter-actor.h  clutter-backend.c  clutter-canvas.c  clutter-device-manager-private.h  clutter-device-manager.c  clutter-device-manager.h  clutter-drop-action.c  clutter-event-private.h  clutter-input-device-tool.h  clutter-main-private.h  clutter-mutter.h  clutter-offscreen-effect.c  clutter-private.h  clutter-stage-private.h  clutter-stage-view.c  clutter-stage.c  clutter-text.c  clutter-types.h  clutter-virtual-input-device.c  clutter-virtual-input-device.h
clutter/clutter/cogl/: clutter-stage-cogl.c
clutter/clutter/deprecated/: clutter-texture.c
clutter/clutter/egl/: clutter-backend-eglnative.c
clutter/clutter/evdev/: clutter-device-manager-evdev.c  clutter-device-manager-evdev.h  clutter-evdev.h  clutter-seat-evdev.c  clutter-seat-evdev.h  clutter-virtual-input-device-evdev.c
clutter/clutter/x11/: clutter-backend-x11.c  clutter-virtual-input-device-x11.c
cogl/cogl/: Makefile.am  cogl-context.c  cogl-context.h  cogl-renderer-private.h  cogl-renderer.c  cogl-texture-3d.c  cogl-texture-rectangle.c  cogl-xlib-renderer.h
cogl/cogl/deprecated/: cogl-shader.c
cogl/cogl/driver/gl/: cogl-buffer-gl.c  cogl-pipeline-opengl.c  cogl-texture-2d-gl.c  cogl-util-gl.c
cogl/cogl/driver/gl/gl/: cogl-pipeline-fragend-arbfp.c  cogl-texture-driver-gl.c
cogl/cogl/driver/gl/gles/: cogl-texture-driver-gles.c
cogl/cogl/winsys/: cogl-winsys-glx.c
data/: org.gnome.mutter.gschema.xml.in
src/: Makefile.am  org.gnome.Mutter.ScreenCast.xml
src/backends/: meta-backend-private.h  meta-backend.c  meta-cursor-private.h  meta-cursor-renderer.c  meta-cursor-renderer.h  meta-cursor-tracker-private.h  meta-cursor-tracker.c  meta-cursor.c  meta-cursor.h  meta-egl.c  meta-gpu.c  meta-gpu.h  meta-input-device.c  meta-input-device.h  meta-input.c  meta-input.h  meta-logical-monitor.c  meta-monitor-config-manager.c  meta-monitor-config-manager.h  meta-monitor-config-migration.c  meta-monitor-config-store.c  meta-monitor-config.c  meta-monitor-manager-dummy.c  meta-monitor-manager-private.h  meta-monitor-manager.c  meta-monitor.c  meta-monitor.h  meta-output.c  meta-output.h  meta-remote-desktop-session.c  meta-remote-desktop-session.h  meta-remote-desktop.c  meta-screen-cast-monitor-stream-src.c  meta-screen-cast-monitor-stream.c  meta-screen-cast-session.c  meta-screen-cast-session.h  meta-screen-cast-stream-src.c  meta-screen-cast-stream.c  meta-screen-cast.c  meta-seat.c  (+4 more)
src/backends/native/: meta-backend-native.c  meta-clutter-backend-native.c  meta-crtc-kms.c  meta-crtc-kms.h  meta-cursor-renderer-native.c  meta-gpu-kms.c  meta-gpu-kms.h  meta-input-device-native.c  meta-input-device-native.h  meta-input-device-tool-native.c  meta-input-device-tool-native.h  meta-input-event-native.c  meta-input-event-native.h  meta-input-native.c  meta-input-native.h  meta-input-settings-native.c  meta-launcher.c  meta-monitor-manager-kms.c  meta-output-kms.c  meta-renderer-native-gles3.c  meta-renderer-native.c  meta-renderer-native.h  meta-seat-native.c  meta-seat-native.h  meta-stage-native.c  meta-virtual-input-device-native.c  meta-virtual-input-device-native.h  meta-xkb.c  meta-xkb.h
src/backends/x11/: meta-backend-x11.c  meta-barrier-x11.c  meta-barrier-x11.h  meta-cursor-renderer-x11.c  meta-gpu-xrandr.c  meta-input-settings-x11.c  meta-monitor-manager-xrandr.c  meta-output-xrandr.c
src/backends/x11/nested/: meta-backend-x11-nested.c  meta-renderer-x11-nested.c
src/compositor/: compositor-private.h  compositor.c  meta-background-actor.c  meta-background-group.c  meta-background.c  meta-plugin-manager.c  meta-shaped-texture.c  meta-surface-actor-wayland.c  meta-surface-actor-wayland.h  meta-surface-actor-x11.c  meta-window-actor-private.h  meta-window-actor.c  meta-window-group.c
src/compositor/plugins/: Makefile.am  default.c
src/core/: barrier.c  boxes.c  constraints.c  core.c  display-private.h  display.c  edge-resistance.c  frame.c  keybindings.c  main.c  meta-barrier-private.h  place.c  screen-private.h  screen.c  stack-tracker.c  stack.c  util-private.h  util.c  window-private.h  window.c  workspace.c
src/frontends/: meta-cursor-private.h  meta-cursor.c  meta-cursor.h
src/frontends/wayland/: meta-cursor-wayland.c  meta-cursor-wayland.h
src/frontends/x11/: meta-cursor-x11.c  meta-cursor-x11.h
src/meta/: boxes.h  compositor-mutter.h  compositor.h  meta-background.h  meta-shaped-texture.h  util.h  window.h
src/tests/: meta-monitor-manager-test.c  monitor-test-utils.c  monitor-unit-tests.c
src/wayland/: meta-tty.c  meta-tty.h  meta-wayland-buffer.c  meta-wayland-buffer.h  meta-wayland-data-device.c  meta-wayland-egl-stream.c  meta-wayland-gtk-shell.c  meta-wayland-input-device.c  meta-wayland-input-device.h  meta-wayland-keyboard.c  meta-wayland-keyboard.h  meta-wayland-legacy-xdg-shell.c  meta-wayland-outputs.c  meta-wayland-outputs.h  meta-wayland-pointer-constraints.c  meta-wayland-pointer.c  meta-wayland-private.h  meta-wayland-shell-surface.c  meta-wayland-stage.c  meta-wayland-stage.h  meta-wayland-subsurface.c  meta-wayland-surface-role-cursor.c  meta-wayland-surface.c  meta-wayland-surface.h  meta-wayland-tablet-pad-group.c  meta-wayland-tablet-pad.c  meta-wayland-tablet-seat.c  meta-wayland-tablet-tool.c  meta-wayland-tablet-tool.h  meta-wayland-touch.c  meta-wayland-types.h  meta-wayland-versions.h  meta-wayland-wl-shell.c  meta-wayland-xdg-foreign.c  meta-wayland-xdg-shell.c  meta-wayland-xdg-shell.h  meta-wayland.c  meta-wayland.h  meta-window-wayland.c  meta-xwayland-selection.c  (+2 more)
src/x11/: meta-x11-display.c  window-x11.c
